tests/basic/check/if/080.pan

f80 : {b:bool|true} -> {v:int|v=3}
f80 = \b:bool. if b then 1 else 2

f81 : {b:bool|true} -> {v:int|v=2}
f81 = \b:bool. if b then 1 else 2

f82 : {b:bool|true} -> {v:int|v=1}
f82 = \b:bool. if b then 1 else 2
